# docs/swagger.json
@@ -111,16 +111,16 @@
                 }
             }
         },
-        "/{platform}/devices/": {
+        "/{platform}/devices": {
             "post": {
-                "description": "Registers a new bridge connection for the specified platform",
+                "description": "Registers a new device connection for the specified platform.\nHere are various platforms supported:\n'wa' (for WhatsApp)\n'signal' (for Signal)",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Adds a device/bridge for a given platform",
+                "summary": "Adds a device for a given platform",
                 "parameters": [
                     {
                         "type": "string",
@@ -130,7 +130,7 @@
                         "required": true
                     },
                     {
-                        "description": "Bridge Payload",
+                        "description": "Device Payload",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -152,8 +152,8 @@
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
                     },
-                    "404": {
-                        "description": "Bridge not found",
+                    "401": {
+                        "description": "Invalid access token",
                         "schema": {
                             "$ref": "#/definitions/main.ErrorResponse"
                         }
